--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ var _0x2f63=['Enter\x20valid\x20Roll\x20number','href=\x27https://www.vierp.in/E
         </script>
   </head>
   <body>
+    <meta charset="utf-8">
   <!---  <div class=".bg-img ">--->
   <pre><b>RESULT VIEWER<b></pre>
 
