--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ var _0x45d2=['\x66\x75\x6e\x63\x74\x69\x6f\x6e\x20\x2a\x5c\x28\x20\x2a\x5c\x29',
 
    <button onclick="result()" type="button" class="btn"><p id="q34">Click me</p></button>
 
-    <p style="color:grey;font-size: 12px">You must signin to vierp in another tab to view the result  </p>
+    <p style="color:red;font-size: 12px">You must signin to vierp in another tab to view the result  </p>
     </form>
 </div>
         
